objects/PaymentHistoryKeymapping__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account_Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment_Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PaymentHistoryKeymapping</label>
</CustomObject>